--- a/index.html
+++ b/index.html
@@ -34,20 +34,25 @@
         </a>
         <!-- /.user -->
       </div>
-      <!-- /.navbar-top -->
-      <nav class="navbar-nav">
-        <ul class="navbar-menu">
-          <li class="navbar-menu__item"><a href="#" class="navbar-menu__link">All Deals</a></li>
-          <li class="navbar-menu__item"><a href="#" class="navbar-menu__link">Hotels</a></li>
-          <li class="navbar-menu__item"><a href="#" class="navbar-menu__link">Activities</a></li>
-          <li class="navbar-menu__item"><a href="#" class="navbar-menu__link">Hotel Day Packages</a></li>
-          <li class="navbar-menu__item"><a href="#" class="navbar-menu__link">Restaurants</a></li>
-          <li class="navbar-menu__item"><a href="#" class="navbar-menu__link">Events</a></li>
-          <li class="navbar-menu__item"><a href="#" class="navbar-menu__link">Rodrigues</a></li>
-        </ul>
-      </nav>
+      <!-- /.navbar-top -->      
     </div>
     <!-- /.container -->
+    <div class="navbar-bottom">
+      <div class="container">
+        <nav class="navbar-nav">
+          <ul class="navbar-menu">
+            <li class="navbar-menu__item"><a href="#" class="navbar-menu__link">All Deals</a></li>
+            <li class="navbar-menu__item"><a href="#" class="navbar-menu__link">Hotels</a></li>
+            <li class="navbar-menu__item"><a href="#" class="navbar-menu__link">Activities</a></li>
+            <li class="navbar-menu__item"><a href="#" class="navbar-menu__link">Hotel Day Packages</a></li>
+            <li class="navbar-menu__item"><a href="#" class="navbar-menu__link">Restaurants</a></li>
+            <li class="navbar-menu__item"><a href="#" class="navbar-menu__link">Events</a></li>
+            <li class="navbar-menu__item"><a href="#" class="navbar-menu__link">Rodrigues</a></li>
+          </ul>
+        </nav>
+      </div>
+    </div>
+    <!-- /.navbar-bottom -->
   </header>
 </body>
 </html>
