--- a/index.html
+++ b/index.html
@@ -74,6 +74,37 @@
       </ul>
     </div>
     <!-- /.breadcrump -->
+    <section class="hotel">
+      <div class="container">
+        <div class="hotel-info">
+          <div class="hotel-info__text">
+            <div class="hotel-wrapper">
+              <div class="stars">
+                <img src="/img/star.svg" alt="star">
+                <img src="/img/star.svg" alt="star">
+                <img src="/img/star.svg" alt="star">
+                <img src="/img/star.svg" alt="star">
+                <img src="/img/star.svg" alt="star">
+              </div>
+              <!-- /.stars -->
+              <h1 class="hotel-name">GRAND HILTON HOTEL</h1>
+              <span class="offer hotel-info__offer">Flash Offer</span>
+              <p class="hotel-description">Half-Board/ All Inclusive + Complimentary Activities + Child Stays Free</p>
+            </div>
+            <!-- /.hotel-wrapper -->
+          </div>
+          <!-- /.hotel-info__text -->
+          <div class="rating hotel-info__rating">
+            <span class="rating-text">User Ratings</span>
+            <span class="rating-count">4.5/5</span>
+          </div>
+        </div>
+        <!-- /.hotel-info -->
+      </div>
+      <!-- /.container -->
+    </section>
+    <!-- /.hotel -->
+
   </div>
   <!-- /.container -->
   
