created: adaptve  768 px

--- a/index.html
+++ b/index.html
@@ -88,16 +88,17 @@
               </div>
               <!-- /.stars -->
               <h1 class="hotel-name">GRAND HILTON HOTEL</h1>
-              <span class="offer hotel-info__offer">Flash Offer</span>
-              <p class="hotel-description">Half-Board/ All Inclusive + Complimentary Activities + Child Stays Free</p>
+              <span class="offer hotel-info__offer">Flash Offer</span>              
             </div>
             <!-- /.hotel-wrapper -->
+            <p class="hotel-description">Half-Board/ All Inclusive + Complimentary Activities + Child Stays Free</p>
           </div>
           <!-- /.hotel-info__text -->
           <div class="rating hotel-info__rating">
             <span class="rating-text">User Ratings</span>
             <span class="rating-count">4.5/5</span>
           </div>
+          <!-- /.rating hotel-info__rating -->
         </div>
         <!-- /.hotel-info -->
       </div>
