--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     </div>
     <!-- /.breadcrump -->
     <section class="hotel">
-      <div class="container">
+      <div class="container hotel-container">
         <div class="hotel-info">
           <div class="hotel-info__text">
             <div class="hotel-wrapper">
@@ -87,7 +87,7 @@
                 <img src="/img/star.svg" alt="star">
               </div>
               <!-- /.stars -->
-              <h1 class="hotel-name">GRAND HILTON HOTEL</h1>
+              <h1 class="hotel-name hotel-info__name">GRAND HILTON HOTEL</h1>
               <span class="offer hotel-info__offer">Flash Offer</span>              
             </div>
             <!-- /.hotel-wrapper -->
