--- a/index.html
+++ b/index.html
@@ -109,15 +109,25 @@
               <!-- Additional required wrapper -->
               <div class="swiper-wrapper">
                 <!-- Slides -->
-                <div class="swiper-slide">Slide 1</div>
-                <div class="swiper-slide">Slide 2</div>
-                <div class="swiper-slide">Slide 3</div>
-                <div class="swiper-slide">Slide 4</div>
-                <div class="swiper-slide">Slide 5</div>
+                <div class="swiper-slide">
+                  <img src="/img/slide-1.jpg" alt="slide" class="swiper-slide__img">
+                </div>
+                <div class="swiper-slide">
+                  <img src="/img/slide-2.jpg" alt="slide" class="swiper-slide__img">
+                </div>
+                <div class="swiper-slide">
+                  <img src="/img/slide-3.jpg" alt="slide" class="swiper-slide__img">
+                </div>
+                <div class="swiper-slide">
+                  <img src="/img/slide-4.jpg" alt="slide" class="swiper-slide__img">
+                </div>
+                <div class="swiper-slide">
+                  <img src="/img/slide-5.jpg" alt="slide" class="swiper-slide__img">
+                </div>
               </div>            
               <!-- If we need navigation buttons -->
-              <div class="swiper-button-prev"></div>
-              <div class="swiper-button-next"></div>
+              <button class="slider-button slider-button--prev"></button>
+              <button class="slider-button slider-button--next"></button>
             </div>
             <!-- ./swiper -->
             </div>
