--- a/index.html
+++ b/index.html
@@ -131,11 +131,51 @@
             </div>
             <!-- ./swiper -->
             </div>
-            <!-- /.container hotel-container -->
+            <!-- /.slider -->
+            <div class="hotel-right">
+              <div class="booking">
+                <div class="booking__info">
+                  <div class="booking__price">
+                    <span class="booking__start">price starts as</span>
+                    <strong class="booking__pricetag">$ 8,500</strong>
+                    <spam class="booking__per-room">per room / night</spam>
+                  </div>
+                  <!-- /.booking__price -->
+                  <div class="booking__room">
+                    <div class="booking__details">
+                      <img src="/img/user.svg" alt="icon: user" class="booking__icon">
+                      <span class="booking__description">2 x Guests</span>
+                    </div>
+                    <div class="booking__details">
+                      <img src="/img/home.svg" alt="icon: home" class="booking__icon">
+                      <span class="booking__description">1 x Room</span>
+                    </div>
+                  </div>
+                  <!-- /.booking__room -->
+                </div>
+                <!-- /.booking__info -->
+                <div class="booking__call-center">
+                  <span class="booking__heading">Quick Booking</span>
+                  <a href="tel:12100" class="booking__number">
+                    <img src="/img/phone-call.svg" alt="icon: phone">
+                    <span class="booking__num">12100</span>
+                  </a>
+                </div>
+                <!-- /.booking__call-center -->
+                <button class="button booking__button">View Other Options</button>
+              </div>
+              <!-- /.booking -->
+              <div class="map">
+            
+              </div>
+              <!-- /.map -->
+            </div>
+            <!-- /.hotel-right -->
           </div>
-          <!-- /.slider -->
+          <!-- /.hotel-grid -->
+          
         </div>
-        <!-- /.hotel-grid -->
+        <!-- /.container hotel-container -->
     </section>
     <!-- /.hotel -->
   </div>
