--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         </div>
         <!-- /.hotel-info -->
         <div class="hotel-grid">
-          <div class="slider">
+          <div class="slider hotel__slider">
             <!-- Slider main container -->
             <div class="swiper">
               <!-- Additional required wrapper -->
@@ -168,7 +168,7 @@
               <div class="map">
                 <iframe
                   src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d253137.8218412511!2d79.76397267862188!3d7.5445809909573!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ae2c96110de8289%3A0x3fd7668bc2d85eb9!2sGrand%20Hilton%20Hotel!5e0!3m2!1sru!2sru!4v1665127250772!5m2!1sru!2sru"
-                  width="347" height="213" style="border:0;" allowfullscreen="" loading="lazy"
+                  width="100%" height="213" style="border:0;" allowfullscreen="" loading="lazy"
                   referrerpolicy="no-referrer-when-downgrade"></iframe>
               </div>
               <!-- /.map -->
