--- a/index.html
+++ b/index.html
@@ -180,9 +180,28 @@
         </div>
         <!-- /.container hotel-container -->
     </section>
-    <!-- /.hotel -->
+    <!-- /.hotel -->    
   </div>
   <!-- /.container --> 
+  <section class="newsletter">
+    <div class="newsletter-wrapper">
+      <h2 class="newsletter-title">
+        subscribe to our
+        <span class="newsletter-title__strong">
+          newsletter
+        </span>
+      </h2>
+      <!-- /.newsletter-title -->
+      <form action="#" class="subscribe newsletter__subscribe">
+        <input type="text" class="subscribe__input" placeholder="Your email address">
+        <button class="subscribe__button">
+          Send
+        </button>
+      </form>
+    </div>
+    <!-- /.newsletter-wrapper -->
+  </section>
+  <!-- /.newsletter -->
   <script src="js/swiper-bundle.min.js"></script> 
   <script src="js/main.js"></script>
 </body>
