--- a/index.html
+++ b/index.html
@@ -103,35 +103,32 @@
         </div>
         <!-- /.hotel-info -->
         <div class="hotel-grid">
-          <div class="slider hotel__slider">
             <!-- Slider main container -->
-            <div class="swiper">
+            <div class="swiper hotel-slider hotel__slider">
               <!-- Additional required wrapper -->
               <div class="swiper-wrapper">
                 <!-- Slides -->
-                <div class="swiper-slide">
+                <div class="swiper-slide hotel-slider__item">
                   <img src="/img/slide-1.jpg" alt="slide" class="swiper-slide__img">
                 </div>
-                <div class="swiper-slide">
+                <div class="swiper-slide hotel-slider__item">
                   <img src="/img/slide-2.jpg" alt="slide" class="swiper-slide__img">
                 </div>
-                <div class="swiper-slide">
+                <div class="swiper-slide hotel-slider__item">
                   <img src="/img/slide-3.jpg" alt="slide" class="swiper-slide__img">
                 </div>
-                <div class="swiper-slide">
+                <div class="swiper-slide hotel-slider__item">
                   <img src="/img/slide-4.jpg" alt="slide" class="swiper-slide__img">
                 </div>
-                <div class="swiper-slide">
+                <div class="swiper-slide hotel-slider__item">
                   <img src="/img/slide-5.jpg" alt="slide" class="swiper-slide__img">
                 </div>
               </div>            
               <!-- If we need navigation buttons -->
-              <button class="slider-button slider-button--prev"></button>
-              <button class="slider-button slider-button--next"></button>
+              <button class="hotel-slider__button hotel-slider__button--prev"></button>
+              <button class="hotel-slider__button hotel-slider__button--next"></button>
             </div>
             <!-- ./swiper -->
-            </div>
-            <!-- /.slider -->
             <div class="hotel-right">
               <div class="booking">
                 <div class="booking__info">
@@ -183,8 +180,8 @@
     <!-- /.hotel -->    
   </div>
   <!-- /.container --> 
-  <section class="newsletter">
-    <div class="newsletter-wrapper">
+  <section class="newsletter" data-parallax="scroll" data-image-src="../img/newsletter-bg.jpg">
+    <div class="newsletter-wrapper"> 
       <h2 class="newsletter-title">
         subscribe to our
         <span class="newsletter-title__strong">
@@ -202,7 +199,56 @@
     <!-- /.newsletter-wrapper -->
   </section>
   <!-- /.newsletter -->
+  <section class="reviews">
+    <div class="container">
+      <h2 class="reviews__title">What people thinks about us</h2>
+      <div class="swiper reviews-slider">
+        <div class="swiper-wrapper">
+          <!-- Slides -->
+          <div class="swiper-slide">
+            <div class="reviews-slider__item">
+              <div class="reviews-slider__profile">
+                <img src="img/reviews-avatar-1.jpg" alt="Photo: Megan Fox" class="reviews-slider__avatar">
+                <h3 class="reviews-slider__username">Megan Fox</h3>                
+                <span class="reviews-slider__date">Stayed 18 Nov, 2019</span>
+                <div class="reviews-slider__rating">
+                  <img src="/img/star.svg" alt="star">
+                  <img src="/img/star.svg" alt="star">
+                  <img src="/img/star.svg" alt="star">
+                  <img src="/img/star.svg" alt="star">
+                  <img src="/img/star.svg" alt="star">
+                </div>
+                <!-- /.reviews-slider__rating -->
+              </div>
+              <!-- /.reviews-slider__profile -->
+              <p class="reviews-slider__text">
+                It was very nice hotel with cleanliness. Staff behavior was good and polite. They welcome us very well. Issue was only
+                that Lift was not in working and we were allotted to 3rd floor and amenities articles were in corner of gallery which
+                were giving bad feeling. Breakfast was good and support of the staff was also very nice. Location is not good as per
+                atmosphere, it is very nearby most of the popular places but self location in a narrow street is not good. Overall it
+                was a good experience and could recommend.
+              </p>
+            </div>
+            <!-- /.reviews-slider__item -->
+          </div>
+          <!-- /.swiper-slide -->
+          <div class="swiper-slide">Slide 2</div>
+          <div class="swiper-slide">Slide 3</div>          
+        </div>
+        <!-- /.swiper-wrapper -->
+        <!-- If we need navigation buttons -->
+        <button class="reviews-slider__button reviews-slider__button--prev"></button>
+        <button class="reviews-slider__button reviews-slider__button--next"></button>
+      </div>
+      <!-- /.reviews-slider -->
+    </div>
+    <!-- /.container -->
+  </section>
+  <!-- /.reviews -->
+
   <script src="js/swiper-bundle.min.js"></script> 
   <script src="js/main.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+  <script src="js/parallax/parallax.js"></script>
 </body>
 </html>
