create: subscribe and review sections

--- a/index.html
+++ b/index.html
@@ -232,8 +232,52 @@
             <!-- /.reviews-slider__item -->
           </div>
           <!-- /.swiper-slide -->
-          <div class="swiper-slide">Slide 2</div>
-          <div class="swiper-slide">Slide 3</div>          
+          <div class="swiper-slide">
+            <div class="reviews-slider__item">
+            <div class="reviews-slider__profile">
+              <img src="img/reviews-avatar-2.jpg" alt="Photo: Brown McFloy" class="reviews-slider__avatar">
+              <h3 class="reviews-slider__username">Brown McFloy</h3>
+              <span class="reviews-slider__date">Stayed 15 Jan, 2020</span>
+              <div class="reviews-slider__rating">
+                <img src="/img/star.svg" alt="star">
+                <img src="/img/star.svg" alt="star">
+                <img src="/img/star.svg" alt="star">
+                <img src="/img/star.svg" alt="star">
+                <img src="/img/star.svg" alt="star">
+              </div>
+              <!-- /.reviews-slider__rating -->
+            </div>
+            <!-- /.reviews-slider__profile -->
+            <p class="reviews-slider__text">
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorem minus architecto expedita doloribus sed sapiente unde omnis rem, delectus aliquid reiciendis dicta quam! Dolores ex vero doloribus autem, eum eligendi iusto aspernatur veniam aut alias soluta rem ea, aperiam atque hic temporibus a? Adipisci deserunt deleniti alias aliquid repellat architecto illo. Placeat quo quaerat architecto, ea adipisci, dicta commodi explicabo beatae repellendus odit mollitia nostrum dolores expedita quae deleniti praesentium aperiam quidem nihil fugiat, a exercitationem. Atque tempore consequuntur pariatur rerum sequi, voluptatem temporibus odit sunt eius esse quam aut tenetur? Possimus dolorum aut iste praesentium nobis ipsa, dolorem reiciendis.
+            </p>
+          </div>
+          <!-- /.reviews-slider__item -->
+        </div>
+        <!-- /.swiper-slide -->
+          <div class="swiper-slide">
+            <div class="reviews-slider__item">
+              <div class="reviews-slider__profile">
+                <img src="img/reviews-avatar-3.jpg" alt="Photo: Elizabette Grey" class="reviews-slider__avatar">
+                <h3 class="reviews-slider__username">Elizabette Grey</h3>
+                <span class="reviews-slider__date">Stayed 23 Aug, 2022</span>
+                <div class="reviews-slider__rating">
+                  <img src="/img/star.svg" alt="star">
+                  <img src="/img/star.svg" alt="star">
+                  <img src="/img/star.svg" alt="star">
+                  <img src="/img/star.svg" alt="star">
+                  <img src="/img/star.svg" alt="star">
+                </div>
+                <!-- /.reviews-slider__rating -->
+              </div>
+              <!-- /.reviews-slider__profile -->
+              <p class="reviews-slider__text">
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sapiente provident dicta culpa dignissimos ullam cum, aliquam totam temporibus accusantium optio amet laborum nostrum error cupiditate recusandae illum quos perspiciatis animi cumque assumenda unde quis impedit maxime sint. Sapiente, fugit sequi placeat vero minima dolorem porro excepturi, rerum totam aperiam quam consectetur hic asperiores odit eius, voluptates libero nesciunt maxime omnis.
+              </p>
+            </div>
+            <!-- /.reviews-slider__item -->
+          </div>
+          <!-- /.swiper-slide -->          
         </div>
         <!-- /.swiper-wrapper -->
         <!-- If we need navigation buttons -->
