created: responsive for reviews

--- a/index.html
+++ b/index.html
@@ -109,19 +109,19 @@
               <div class="swiper-wrapper">
                 <!-- Slides -->
                 <div class="swiper-slide hotel-slider__item">
-                  <img src="/img/slide-1.jpg" alt="slide" class="swiper-slide__img">
+                  <img src="/img/slide-1.jpg" alt="slide" class="hotel-slider__img">
                 </div>
                 <div class="swiper-slide hotel-slider__item">
-                  <img src="/img/slide-2.jpg" alt="slide" class="swiper-slide__img">
+                  <img src="/img/slide-2.jpg" alt="slide" class="hotel-slider__img">
                 </div>
                 <div class="swiper-slide hotel-slider__item">
-                  <img src="/img/slide-3.jpg" alt="slide" class="swiper-slide__img">
+                  <img src="/img/slide-3.jpg" alt="slide" class="hotel-slider__img">
                 </div>
                 <div class="swiper-slide hotel-slider__item">
-                  <img src="/img/slide-4.jpg" alt="slide" class="swiper-slide__img">
+                  <img src="/img/slide-4.jpg" alt="slide" class="hotel-slider__img">
                 </div>
                 <div class="swiper-slide hotel-slider__item">
-                  <img src="/img/slide-5.jpg" alt="slide" class="swiper-slide__img">
+                  <img src="/img/slide-5.jpg" alt="slide" class="hotel-slider__img">
                 </div>
               </div>            
               <!-- If we need navigation buttons -->
@@ -135,7 +135,7 @@
                   <div class="booking__price">
                     <span class="booking__start">price starts as</span>
                     <strong class="booking__pricetag">$ 8,500</strong>
-                    <spam class="booking__per-room">per room / night</spam>
+                    <span class="booking__per-room">per room / night</span>
                   </div>
                   <!-- /.booking__price -->
                   <div class="booking__room">
@@ -201,7 +201,7 @@
   <!-- /.newsletter -->
   <section class="reviews">
     <div class="container">
-      <h2 class="reviews__title">What people thinks about us</h2>
+      <h2 class="reviews__title">What people think about us</h2>
       <div class="swiper reviews-slider">
         <div class="swiper-wrapper">
           <!-- Slides -->
