in-process: Other packages section

--- a/index.html
+++ b/index.html
@@ -180,6 +180,222 @@
     <!-- /.hotel -->    
   </div>
   <!-- /.container --> 
+
+  <section class="other-packages">
+    <div class="container">
+      <div class="packages">
+        <h2 class="packages-title">other packages</h2>
+        <div class="packages-wrapper">
+          <div class="packages-element packages-double">
+            <img src="/img/offer-1.jpg" alt="Flash Offer img" class="packages-double__big-image">
+            <div class="packages-double__information">
+              <div class="packages-double__stars">
+                <img src="/img/star.svg" alt="star">
+                <img src="/img/star.svg" alt="star">
+                <img src="/img/star.svg" alt="star">
+                <img src="/img/star.svg" alt="star">
+                <img src="/img/star.svg" alt="star">
+              </div>              
+              <!-- /.packages-double__stars -->
+              <h3 class="packages-double__title">Hotel Blue Haven</h3>
+              <p class="packages-double__description">Aute quis duis excepteur excepteur ipsum cat eiusmod consectetur enim laborum magna llit. Ipsum est fugiat velit ea
+              llamco do esse ut in veniam sun in onsequat. Aute quis duis epteur excepteur ipsum occaecat eiusmod nsectetur enim
+              laborum magna mollit. Ipsum est fugiat velit ea ullamco do</p>
+              <div class="packages-double__room">
+                <div class="packages-element__details">
+                  <img src="/img/map-pin.svg" alt="icon: user" class="packages-element__icon">
+                  <span class="packages-element__text">1749 Wheeler Ridge Delaware</span>
+                </div>
+                <div class="packages-element__details">
+                  <img src="/img/user.svg" alt="icon: user" class="packages-element__icon">
+                  <span class="packages-element__text">2 x Guests</span>
+                </div>
+                <div class="packages-element__details">
+                  <img src="/img/home.svg" alt="icon: home" class="packages-element__icon">
+                  <span class="packages-element__text">1 x Room</span>
+                </div>
+              </div>
+              <!-- /.packages-double__room -->
+              <span class="packages-element__old-price">$ 10,500</span>
+              <div class="packages-element__bookNow">
+                <span class="packages-element__price">$ 8,500</span>
+                <button class="packages-element__button">Book Now</button>
+              </div>
+              <!-- /.packages-element__bookNow -->
+            </div>
+            <!-- /.packages-double__information -->
+          </div>
+          <!-- /.packages-element packages-double -->
+          <div class="packages-element packages-brief">
+            <img src="/img/offer-2.jpg" alt="Flash Offer img" class="packages-brief__image">
+            <div class="packages-brief__information">
+              <div class="packages-brief__stars">
+                <img src="/img/star.svg" alt="star">
+                <img src="/img/star.svg" alt="star">
+                <img src="/img/star.svg" alt="star">
+                <img src="/img/star.svg" alt="star">
+                <img src="/img/star.svg" alt="star">
+              </div>
+              <!-- /.packages-brief__stars -->
+              <h3 class="packages-brief__title">LUX* Belle Mare</h3>
+              <p class="packages-brief__description">Aute quis duis excepteur excepteur ipsum cat eiusmod consectetur enim laborum
+                magna llit. Ipsum est fugiat velit ea
+                llamco do esse ut in veniam sun in onsequat. Aute quis duis epteur excepteur ipsum occaecat eiusmod nsectetur enim
+                laborum magna mollit. Ipsum est fugiat velit ea ullamco do</p>
+              <div class="packages-brief__room">
+                <div class="packages-element__details">
+                  <img src="/img/map-pin.svg" alt="icon: user" class="packages-element__icon">
+                  <span class="packages-element__text">1749 Wheeler Ridge Delaware</span>
+                </div>
+                <div class="packages-element__details">
+                  <img src="/img/user.svg" alt="icon: user" class="packages-element__icon">
+                  <span class="packages-element__text">2 x Guests</span>
+                </div>
+                <div class="packages-element__details">
+                  <img src="/img/home.svg" alt="icon: home" class="packages-element__icon">
+                  <span class="packages-element__text">1 x Room</span>
+                </div>
+              </div>
+              <!-- /.packages-brief__room -->
+              <span class="packages-element__old-price">$ 8,500</span>
+              <div class="packages-element__bookNow">
+                <span class="packages-element__price">$ 3,000</span>
+                <button class="packages-element__button">Book Now</button>
+              </div>
+              <!-- /.packages-element__bookNow -->
+            </div>
+            <!-- /.packages-brief__information -->
+          </div>
+          <div class="packages-element packages-brief">
+            <img src="/img/offer-3.jpg" alt="Flash Offer img" class="packages-brief__image">
+            <div class="packages-brief__information">
+              <div class="packages-brief__stars">
+                <img src="/img/star.svg" alt="star">
+                <img src="/img/star.svg" alt="star">
+                <img src="/img/star.svg" alt="star">
+                <img src="/img/star.svg" alt="star">
+                <img src="/img/star.svg" alt="star">
+              </div>
+              <!-- /.packages-brief__stars -->
+              <h3 class="packages-brief__title">White Palace</h3>
+              <p class="packages-brief__description">Aute quis duis excepteur excepteur ipsum cat eiusmod consectetur enim laborum
+                magna llit. Ipsum est fugiat velit ea
+                llamco do esse ut in veniam sun in onsequat. Aute quis duis epteur excepteur ipsum occaecat eiusmod nsectetur enim
+                laborum magna mollit. Ipsum est fugiat velit ea ullamco do</p>
+              <div class="packages-brief__room">
+                <div class="packages-element__details">
+                  <img src="/img/map-pin.svg" alt="icon: user" class="packages-element__icon">
+                  <span class="packages-element__text">1749 Wheeler Ridge Delaware</span>
+                </div>
+                <div class="packages-element__details">
+                  <img src="/img/user.svg" alt="icon: user" class="packages-element__icon">
+                  <span class="packages-element__text">2 x Guests</span>
+                </div>
+                <div class="packages-element__details">
+                  <img src="/img/home.svg" alt="icon: home" class="packages-element__icon">
+                  <span class="packages-element__text">1 x Room</span>
+                </div>
+              </div>
+              <!-- /.packages-brief__room -->
+              <span class="packages-element__old-price">$ 10,500</span>
+              <div class="packages-element__bookNow">
+                <span class="packages-element__price">$ 9,500</span>
+                <button class="packages-element__button">Book Now</button>
+              </div>
+              <!-- /.packages-element__bookNow -->
+            </div>
+            <!-- /.packages-brief__information -->
+          </div>
+          <div class="packages-element packages-brief">
+            <img src="/img/offer-4.jpg" alt="Flash Offer img" class="packages-brief__image">
+            <div class="packages-brief__information">
+              <div class="packages-brief__stars">
+                <img src="/img/star.svg" alt="star">
+                <img src="/img/star.svg" alt="star">
+                <img src="/img/star.svg" alt="star">
+                <img src="/img/star.svg" alt="star">
+                <img src="/img/star.svg" alt="star">
+              </div>
+              <!-- /.packages-brief__stars -->
+              <h3 class="packages-brief__title">Luxury Place</h3>
+              <p class="packages-brief__description">Aute quis duis excepteur excepteur ipsum cat eiusmod consectetur enim laborum
+                magna llit. Ipsum est fugiat velit ea
+                llamco do esse ut in veniam sun in onsequat. Aute quis duis epteur excepteur ipsum occaecat eiusmod nsectetur enim
+                laborum magna mollit. Ipsum est fugiat velit ea ullamco do</p>
+              <div class="packages-brief__room">
+                <div class="packages-element__details">
+                  <img src="/img/map-pin.svg" alt="icon: user" class="packages-element__icon">
+                  <span class="packages-element__text">1749 Wheeler Ridge Delaware</span>
+                </div>
+                <div class="packages-element__details">
+                  <img src="/img/user.svg" alt="icon: user" class="packages-element__icon">
+                  <span class="packages-element__text">2 x Guests</span>
+                </div>
+                <div class="packages-element__details">
+                  <img src="/img/home.svg" alt="icon: home" class="packages-element__icon">
+                  <span class="packages-element__text">1 x Room</span>
+                </div>
+              </div>
+              <!-- /.packages-brief__room -->
+              <span class="packages-element__old-price">$ 4,500</span>
+              <div class="packages-element__bookNow">
+                <span class="packages-element__price">$ 2,500</span>
+                <button class="packages-element__button">Book Now</button>
+              </div>
+              <!-- /.packages-element__bookNow -->
+            </div>
+            <!-- /.packages-brief__information -->
+          </div>
+          <div class="packages-element packages-brief">
+            <img src="/img/offer-5.jpg" alt="Flash Offer img" class="packages-brief__image">
+            <div class="packages-brief__information">
+              <div class="packages-brief__stars">
+                <img src="/img/star.svg" alt="star">
+                <img src="/img/star.svg" alt="star">
+                <img src="/img/star.svg" alt="star">
+                <img src="/img/star.svg" alt="star">
+                <img src="/img/star.svg" alt="star">
+              </div>
+              <!-- /.packages-brief__stars -->
+              <h3 class="packages-brief__title">Hotel Five Star</h3>
+              <p class="packages-brief__description">Aute quis duis excepteur excepteur ipsum cat eiusmod consectetur enim laborum
+                magna llit. Ipsum est fugiat velit ea
+                llamco do esse ut in veniam sun in onsequat. Aute quis duis epteur excepteur ipsum occaecat eiusmod nsectetur enim
+                laborum magna mollit. Ipsum est fugiat velit ea ullamco do</p>
+              <div class="packages-brief__room">
+                <div class="packages-element__details">
+                  <img src="/img/map-pin.svg" alt="icon: user" class="packages-element__icon">
+                  <span class="packages-element__text">1749 Wheeler Ridge Delaware</span>
+                </div>
+                <div class="packages-element__details">
+                  <img src="/img/user.svg" alt="icon: user" class="packages-element__icon">
+                  <span class="packages-element__text">2 x Guests</span>
+                </div>
+                <div class="packages-element__details">
+                  <img src="/img/home.svg" alt="icon: home" class="packages-element__icon">
+                  <span class="packages-element__text">1 x Room</span>
+                </div>
+              </div>
+              <!-- /.packages-brief__room -->
+              <span class="packages-element__old-price">$ 6,500</span>
+              <div class="packages-element__bookNow">
+                <span class="packages-element__price">$ 3,500</span>
+                <button class="packages-element__button">Book Now</button>
+              </div>
+              <!-- /.packages-element__bookNow -->
+            </div>
+            <!-- /.packages-brief__information -->
+          </div>        
+        </div>
+        <!-- /.packages-wrapper -->
+      </div>
+      <!-- /.packages -->
+      
+    </div>
+    <!-- /.container -->
+  </section>
+  <!-- /.packages -->
+
   <section class="newsletter" data-parallax="scroll" data-image-src="../img/newsletter-bg.jpg">
     <div class="newsletter-wrapper"> 
       <h2 class="newsletter-title">
