create: media for packages

--- a/index.html
+++ b/index.html
@@ -187,6 +187,9 @@
         <h2 class="packages-title">other packages</h2>
         <div class="packages-wrapper">
           <div class="packages-element packages-double">
+            <div class="packages-double__imagewrapper">
+              
+            </div>
             <img src="/img/offer-1.jpg" alt="Flash Offer img" class="packages-double__big-image">
             <div class="packages-double__information">
               <div class="packages-double__stars">
@@ -227,7 +230,9 @@
           </div>
           <!-- /.packages-element packages-double -->
           <div class="packages-element packages-brief">
-            <img src="/img/offer-2.jpg" alt="Flash Offer img" class="packages-brief__image">
+            <div class="package-brief__imgwrapper">
+              <img src="/img/offer-2.jpg" alt="Flash Offer img" class="packages-brief__image">
+            </div>            
             <div class="packages-brief__information">
               <div class="packages-brief__stars">
                 <img src="/img/star.svg" alt="star">
@@ -267,7 +272,9 @@
             <!-- /.packages-brief__information -->
           </div>
           <div class="packages-element packages-brief">
-            <img src="/img/offer-3.jpg" alt="Flash Offer img" class="packages-brief__image">            
+            <div class="package-brief__imgwrapper">
+              <img src="/img/offer-3.jpg" alt="Flash Offer img" class="packages-brief__image">
+            </div>                        
             <div class="packages-brief__information">
               <div class="packages-brief__stars">
                 <img src="/img/star.svg" alt="star">
@@ -307,7 +314,9 @@
             <!-- /.packages-brief__information -->
           </div>
           <div class="packages-element packages-brief">
-            <img src="/img/offer-4.jpg" alt="Flash Offer img" class="packages-brief__image">
+            <div class="package-brief__imgwrapper">
+              <img src="/img/offer-4.jpg" alt="Flash Offer img" class="packages-brief__image">
+            </div>            
             <div class="packages-brief__information">
               <div class="packages-brief__stars">
                 <img src="/img/star.svg" alt="star">
@@ -347,7 +356,9 @@
             <!-- /.packages-brief__information -->
           </div>
           <div class="packages-element packages-brief">
-            <img src="/img/offer-5.jpg" alt="Flash Offer img" class="packages-brief__image">
+            <div class="package-brief__imgwrapper">
+              <img src="/img/offer-5.jpg" alt="Flash Offer img" class="packages-brief__image">
+            </div>            
             <div class="packages-brief__information">
               <div class="packages-brief__stars">
                 <img src="/img/star.svg" alt="star">
