--- a/index.html
+++ b/index.html
@@ -549,7 +549,7 @@
   </section>
   <!-- /.activities -->
   <footer class="footer">
-    <div class="container">
+    <div class="container footer__container">
       <div class="footer-wrapper">
         <img src="/img/vertical-logo.svg" alt="Logo: Best Tour Plan" class="footer__logo">
         <div class="footer__list footer__categories">
