create: creating Newsletter subscribtion

--- a/index.html
+++ b/index.html
@@ -428,8 +428,8 @@
         </span>
       </h2>
       <!-- /.newsletter-title -->
-      <form action="#" class="subscribe newsletter__subscribe">
-        <input type="text" class="subscribe__input" placeholder="Your email address">
+      <form action="subscribe.php" class="subscribe newsletter__subscribe">
+        <input type="text" class="subscribe__input" placeholder="Your email address" name="email">
         <button class="subscribe__button">
           Send
         </button>
