fix: added ESC option to close modal

--- a/index.html
+++ b/index.html
@@ -700,7 +700,8 @@
     </div>
     <!-- /.modal__dialog -->
   </div>
-  <!-- /.modal --><div class="modal" id="rating-modal">
+  <!-- /.modal -->
+  <div class="modal" id="rating-modal">
     <div class="modal__overlay"></div>
     <!-- /.modal__overlay -->
     <div class="modal__dialog">
